# Smart-Parking-Patrol-Car-Vacant-Spot-Detection-System

Auv_Car_control/: .mxproject  test.ioc  电机调速.txt
Auv_Car_control/Core/Inc/: main.h  stm32f4xx_it.h  tim.h  usart.h
Auv_Car_control/Core/Src/: ReadMe.c  freertos.c  gpio.c  main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
Auv_Car_control/MDK-ARM/: JLinkLog.txt  startup_stm32f427xx.lst  test.uvguix.18439  test.uvguix.Lkdot023  test.uvguix.xxxgd  test.uvoptx  test.uvprojx
Auv_Car_control/MDK-ARM/test/: cmsis_os.crf  cmsis_os.d  control.crf  control.d  croutine.crf  croutine.d  event_groups.crf  event_groups.d  freertos.crf  freertos.d  function.crf  function.d  gpio.crf  gpio.d  heap_4.crf  heap_4.d  list.crf  list.d  main.crf  main.d  mbcrc.crf  mbcrc.d  parements.crf  parements.d  pns.crf  pns.d  port.crf  port.d  queue.crf  queue.d  readme.d  startup_stm32f427xx.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  (+49 more)
Auv_Car_control/Mycode/: MBcrc.c  MBcrc.h  control.c  control.h  function.c  function.h  parements.c  parements.h  pns.c  pns.h
Parking_car_update/: README.md
Parking_car_update/01_docs/: project_logic_table.md
Parking_car_update/02_ros2_ws/src/chassis/car_control/: README.md  diagram.mmd  package.xml  setup.py
Parking_car_update/02_ros2_ws/src/chassis/car_control/car_control/: __init__.py  car_control_node.py
Parking_car_update/02_ros2_ws/src/chassis/car_control/resource/: car_control
Parking_car_update/02_ros2_ws/src/chassis/car_control_msgs/: CMakeLists.txt  package.xml
Parking_car_update/02_ros2_ws/src/chassis/car_control_msgs/msg/: CarFeedback.msg
Parking_car_update/02_ros2_ws/src/chassis/car_odometry/: package.xml  readme.txt  setup.cfg  setup.py
Parking_car_update/02_ros2_ws/src/chassis/car_odometry/car_odometry/: car_odometry_node.py
Parking_car_update/02_ros2_ws/src/chassis/car_odometry/launch/: car_bringup.launch.py
Parking_car_update/02_ros2_ws/src/localization/robot_localization/: package.xml  setup.cfg  setup.py
Parking_car_update/02_ros2_ws/src/localization/robot_localization/config/: ekf_odom.yaml
Parking_car_update/02_ros2_ws/src/localization/robot_localization/launch/: fusion_odom.launch.py
Parking_car_update/02_ros2_ws/src/localization/robot_localization/resource/: car_robot_localization
Parking_car_update/02_ros2_ws/src/mapping/car_slam_toolbox/car_slam_toolbox/: package.xml  setup.cfg  setup.py
Parking_car_update/02_ros2_ws/src/mapping/car_slam_toolbox/car_slam_toolbox/config/: mapper_params_online_async.yaml
Parking_car_update/02_ros2_ws/src/mapping/car_slam_toolbox/car_slam_toolbox/launch/: car_slam.launch.py
Parking_car_update/02_ros2_ws/src/mapping/car_slam_toolbox/car_slam_toolbox/resource/: car_slam_toolbox
Parking_car_update/02_ros2_ws/src/perception/lidar/lidar/: package.xml  (+2 more)
Parking_car_update/02_ros2_ws/src/perception/lidar/parking_robot_scan/: package.xml  readme.txt  setup.cfg  setup.py
Parking_car_update/02_ros2_ws/src/perception/lidar/parking_robot_scan/config/: parking_robot_scan.rviz
Parking_car_update/02_ros2_ws/src/perception/lidar/parking_robot_scan/launch/: parking_robot_scan.launch.py
Parking_car_update/02_ros2_ws/src/perception/lidar/parking_robot_scan/parking_robot_scan/: pointcloud_to_scan.py
Parking_car_update/04_reference_outputs/: frames_2026-07-03_10.51.34.gv  frames_2026-07-04_11.44.17.gv
Parking_car_update/05_cleanup_notes/: cleanup_recommendations.md
Parking_car_update/parking_upper_computer/: home_page.py  violation_events_page.py
maixcam_project/: 7and8_modify0518.py  model_271483.mud
(+8 files in other folders)
